Navbutton fix on mobile, smooth scroll on 'page' rendering

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   position: fixed;
   background-color: #1d1d1d;
   transition: .5s;
-  z-index: 1000;
+  z-index: 500;
 }
 
 
@@ -173,6 +173,11 @@
   transition: .5s;
   color: #A7BCD6;
   /* transform: translateY(10px); */
+}
+
+.floater-button-navbar {
+  width: 50%;
+  cursor: pointer;
 }
 
 @media (min-width: 1000px) {
